Update icons and enhance font customization features
- Updated icon files: icon.ico, icon.png, and win_tray.ico.
- Added Google Fonts for handwriting styles in index.html.
- Introduced global font settings in main.css and style.css.
- Enhanced ChatInput and Message components to support custom font styles.
- Added font family and size selection options in CommonSettings.vue with a dialog for custom fonts.
- Updated i18n settings for new font-related features.

--- a/src/renderer/src/i18n/zh-CN/settings.json
+++ b/src/renderer/src/i18n/zh-CN/settings.json
@@ -33,6 +33,22 @@
     "theme": "主题",
     "themeSelect": "选择主题",
     "closeToQuit": "点击关闭按钮时退出程序",
+    "fontFamily": "字体样式",
+    "fontSize": "字体大小",
+    "selectFont": "选择字体",
+    "systemFont": "系统默认",
+    "customFont": "自定义字体",
+    "customFontDialogTitle": "添加自定义字体",
+    "customFontDialogDescription": "请输入自定义字体的名称和字体族信息",
+    "customFontName": "字体显示名称",
+    "customFontNamePlaceholder": "请输入字体显示名称",
+    "customFontFamily": "字体族(font-family)",
+    "customFontFamilyPlaceholder": "如: 'Fira Code', monospace",
+    "selectFromSystemFonts": "从系统字体中选择",
+    "fontPreview": "字体预览",
+    "browserPath": "浏览器路径",
+    "browserPathPlaceholder": "例如: C:\\Program Files\\Google\\Chrome\\Application\\chrome.exe",
+    "selectBrowserPath": "选择浏览器路径",
     "shortcut": {
       "title": "快捷键设置",
       "newChat": "新建聊天"
